homeworks/s-kuranda/module-03/lesson-10/redis.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
  namespace: lesson-10
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis-server
          image: redis:alpine
          ports:
            - containerPort: 6379
          command: ["redis-server"]
