homeworks/s-kuranda/module-03/lesson-10/redis.statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis-statefulset
  namespace: lesson-10
spec:
  replicas: 3
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis-server
          image: redis:alpine
          ports:
            - containerPort: 6379
          command: ["redis-server"]
          volumeMounts:
          - name: redis-data
            mountPath: /data
  volumeClaimTemplates:
  - metadata:
      name: redis-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
