homeworks/s-kuranda/module-03/lesson-10/app.svc.yml
apiVersion: v1
kind: Service
metadata:
  name: app-svc
  namespace: lesson-10
spec:
  selector:
    app: app
  type: ClusterIP
  ports:
    - name: app
      port: 8080
      targetPort: 8080
      #nodePort: 30088
