homeworks/s-kuranda/module-03/lesson-10/redis.svc.yml
apiVersion: v1
kind: Service
metadata:
  name: redis-svc
  namespace: lesson-10
spec:
  selector:
    app: redis
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
